--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": ["ES2022"],
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -15,6 +14,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../runtime/src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
